
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "jw-northrop", email = "105614380+jw-northrop@users.noreply.github.com"},
]
dependencies = [
    "pandas>=2.0.2",
    "nltk>=3.8.1",
    "fuzzywuzzy>=0.18.0",
    "PyDictionary>=2.0.1",
    "openpyxl>=3.1.2",
    "numpy>=1.25.0",
    "flask>=2.3.2",
    "flask-cors>=4.0.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}
